# ChangeLog for dev-util/rapidsvn
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/rapidsvn/Attic/ChangeLog,v 1.38 2006/09/08 04:52:55 nerdboy Exp $

  08 Sep 2006; Steve Arnold <nerdboy@gentoo.org>
  +files/rapidsvn-svncpp_link.patch, rapidsvn-0.9.3.ebuild:
  Added back svncpp link patch for as-needed bug 146064.

  03 Sep 2006; Mart Raudsepp <leio@gentoo.org>
  -files/rapidsvn-0.9.2-gcc-4.patch, -files/svncpp_0.6.1_link.patch,
  -rapidsvn-0.7.1.ebuild, -rapidsvn-0.8.0.ebuild, -rapidsvn-0.9.0-r1.ebuild,
  -rapidsvn-0.9.2.ebuild:
  Clean out old versions.

  17 Aug 2006; Markus Rothe <corsair@gentoo.org> rapidsvn-0.9.3.ebuild:
  Stable on ppc64

  12 Aug 2006; Jason Wever <weeve@gentoo.org> rapidsvn-0.9.3.ebuild:
  Stable on SPARC.

  09 Aug 2006; Thomas Cort <tcort@gentoo.org> rapidsvn-0.9.3.ebuild:
  Stable on amd64 wrt Bug #134699.

  05 Aug 2006; Michael Hanselmann <hansmi@gentoo.org> rapidsvn-0.9.3.ebuild:
  Stable on ppc.

  01 Aug 2006; Andrej Kacian <ticho@gentoo.org> rapidsvn-0.9.3.ebuild:
  Stable on x86, bug #134699.

  20 Jul 2006; Markus Rothe <corsair@gentoo.org> rapidsvn-0.9.3.ebuild:
  Added ~ppc64; bug #134699

  10 Jul 2006; Gustavo Zacarias <gustavoz@gentoo.org> rapidsvn-0.9.2.ebuild:
  Stable on sparc wrt #134699

*rapidsvn-0.9.3 (05 Jul 2006)

  05 Jul 2006; Steve Arnold <nerdboy@gentoo.org> +rapidsvn-0.9.3.ebuild:
  New version with updated neon support (neon version must be in sync with
  neon DEPEND in subversion) and upstream fixes.  Updated bug #134699.

  01 Jul 2006; Lars Weiler <pylon@gentoo.org> rapidsvn-0.9.2.ebuild:
  Stable on ppc; bug #134699.

  10 Jun 2006; Michael Hanselmann <hansmi@gentoo.org>
  rapidsvn-0.9.0-r1.ebuild:
  Stable on ppc.

  02 Jun 2006; Steve Arnold <nerdboy@gentoo.org>
  +files/rapidsvn-0.9.2-gcc-4.patch, rapidsvn-0.9.2.ebuild:
  Updates for bugs 134978 and 134976; thanks to Gergan Penkov 
  <gpp666_999 at yahoo.de> for the patch.
