@@ -3,14 +3,19 @@ MD5 8fbb41ca751a2e4336d85f9d0bcae422 files/rapidsvn-svncpp_link.patch 304
 RMD160 3d2b6f48e46e3c5e39a499589043aa09de60d8c6 files/rapidsvn-svncpp_link.patch 304
 SHA256 99a4690987be6f39400a737ca12762495621fc2789fed18c5d9903a8d87ae968 files/rapidsvn-svncpp_link.patch 304
 DIST rapidsvn-0.9.3.tar.gz 998268 RMD160 316904503ab1a067fb14b0567d6e28bc2a6ad6c5 SHA1 71a57ffb4f7944191df51c4a2a87f1c971567543 SHA256 90363935f9a1cb3177d045679db39c94ee44ffc3d67ed63570900ca64771f139
-EBUILD rapidsvn-0.9.3.ebuild 2667 RMD160 f779a33c88df3f9e99201bbc34ecac7097f010bd SHA1 1b15181f169ed66bb96b9c5bdedc7839cc5edced SHA256 2e0ebbaadf1435e7b46a8ddb147bd89a254c9dcb4ec234bb87c29e14d580de8c
-MD5 f823e9d1f7a59c3a617982e0ae6556b3 rapidsvn-0.9.3.ebuild 2667
-RMD160 f779a33c88df3f9e99201bbc34ecac7097f010bd rapidsvn-0.9.3.ebuild 2667
-SHA256 2e0ebbaadf1435e7b46a8ddb147bd89a254c9dcb4ec234bb87c29e14d580de8c rapidsvn-0.9.3.ebuild 2667
-MISC ChangeLog 6373 RMD160 15264b1072d25d295403f7fb69e8dcc0f33d93ee SHA1 9ce2fb0bdec85e747555bb0ccbbcf9d48d38a397 SHA256 16311cc50bcb4786ed6f4d7f6fdaaf815795476db479ccc6e476433d25de8a37
-MD5 5c6669350dda6dd78e7af5f4f16e0a2c ChangeLog 6373
-RMD160 15264b1072d25d295403f7fb69e8dcc0f33d93ee ChangeLog 6373
-SHA256 16311cc50bcb4786ed6f4d7f6fdaaf815795476db479ccc6e476433d25de8a37 ChangeLog 6373
+DIST rapidsvn-0.9.4.tar.gz 1057482 RMD160 edbabab261b69acc78a2009f2da175b2b70c8987 SHA1 0f8eff53964f641253d6a4be82187ab9f30168c7 SHA256 20c6a17ed91171bae6c3af7b611b0f91395cb2962fc0cfe1d66dfd5178d60651
+EBUILD rapidsvn-0.9.3.ebuild 2714 RMD160 e32d4ec302f569fa0c1140d0a2fe60dc90fbdb64 SHA1 1f72ba8de9e3ab56c83c0b971182558a9c8380ee SHA256 c270f288db4ad8066588383dfc34ab711f161697f0e1fc4709ccb9340ce27e98
+MD5 3be6b4f43e44ded7a617f3e4ea15d957 rapidsvn-0.9.3.ebuild 2714
+RMD160 e32d4ec302f569fa0c1140d0a2fe60dc90fbdb64 rapidsvn-0.9.3.ebuild 2714
+SHA256 c270f288db4ad8066588383dfc34ab711f161697f0e1fc4709ccb9340ce27e98 rapidsvn-0.9.3.ebuild 2714
+EBUILD rapidsvn-0.9.4.ebuild 2729 RMD160 b87f39ff2ce35c4f3b41fcf8876bee35710d8631 SHA1 eebeb8c5907db654ab175b3742840862467f0f4b SHA256 b0caa726199715912d4a979758de57cc0ddd672560079d0dc9fb34999937895b
+MD5 9275c9534fd6ec9b493fa017f38a8e6a rapidsvn-0.9.4.ebuild 2729
+RMD160 b87f39ff2ce35c4f3b41fcf8876bee35710d8631 rapidsvn-0.9.4.ebuild 2729
+SHA256 b0caa726199715912d4a979758de57cc0ddd672560079d0dc9fb34999937895b rapidsvn-0.9.4.ebuild 2729
+MISC ChangeLog 6571 RMD160 5fbeea0efa9cee30a8f7dc5f8bd079c0cd4cd556 SHA1 3a1e64382707df189f0f364ed27cb04467ce75cb SHA256 12bbe937336df6c50b6af5720a21ebfff1daa0d24fd004b09558e327c815d533
+MD5 44e228506e3085730b382a23aea6422f ChangeLog 6571
+RMD160 5fbeea0efa9cee30a8f7dc5f8bd079c0cd4cd556 ChangeLog 6571
+SHA256 12bbe937336df6c50b6af5720a21ebfff1daa0d24fd004b09558e327c815d533 ChangeLog 6571
 MISC metadata.xml 518 RMD160 b9c97307a72d2c0ae05deb166229ffc603d8855b SHA1 6b9c6a8c99c7dd184cf048b4e306f0a0e5f81788 SHA256 b7e173df02d2585da2771a95e6acd8ae824e61887087747d227b9ea07bf0b435
 MD5 35d9a0711821962697d1e9a351f7ea58 metadata.xml 518
 RMD160 b9c97307a72d2c0ae05deb166229ffc603d8855b metadata.xml 518
@@ -18,3 +23,6 @@ SHA256 b7e173df02d2585da2771a95e6acd8ae824e61887087747d227b9ea07bf0b435 metadata
 MD5 4cb808416b15233e6b6b44069713fcdb files/digest-rapidsvn-0.9.3 244
 RMD160 6d6ce906df26e945ce12f883ae10ce316ab02102 files/digest-rapidsvn-0.9.3 244
 SHA256 2a487afd2c11f39d6065e2b7070b61ba90b224c7a0b9b1b2fee0ebc9a8354f04 files/digest-rapidsvn-0.9.3 244
+MD5 9fd1ee0ee32f32dd6a4c8ec63455f5de files/digest-rapidsvn-0.9.4 247
+RMD160 caa1d07857e71a969165978d0ab83e9d7f450f3b files/digest-rapidsvn-0.9.4 247
+SHA256 1a04b081bdf76410542fb35f3388a137aeb0df9c00b3408631105e916f6e04e6 files/digest-rapidsvn-0.9.4 247
