@@ -1,6 +1,12 @@
 # ChangeLog for dev-util/rapidsvn
-# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/rapidsvn/Attic/ChangeLog,v 1.38 2006/09/08 04:52:55 nerdboy Exp $
+# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-util/rapidsvn/Attic/ChangeLog,v 1.39 2007/01/10 08:44:15 nerdboy Exp $
+
+*rapidsvn-0.9.4 (10 Jan 2007)
+
+  10 Jan 2007; Steve Arnold <nerdboy@gentoo.org> rapidsvn-0.9.3.ebuild,
+  +rapidsvn-0.9.4.ebuild:
+  Minor QA fix and version bump to current stable upstream release.
 
   08 Sep 2006; Steve Arnold <nerdboy@gentoo.org>
   +files/rapidsvn-svncpp_link.patch, rapidsvn-0.9.3.ebuild:
